2008-01-17  Roland Stigge  <stigge@antcom.de>

	* libxml++/attribute.cc:
	* libxml++/dtd.cc:
	* libxml++/dtd.h:
	* libxml++/io/ostreamoutputbuffer.h:
	* libxml++/io/outputbuffer.h:
	* libxml++/keepblanks.cc:
	* libxml++/keepblanks.h:
	* libxml++/libxml++.h:
	* libxml++/nodes/cdatanode.cc:
	* libxml++/nodes/cdatanode.h:
	* libxml++/nodes/commentnode.cc:
	* libxml++/nodes/commentnode.h:
	* libxml++/nodes/contentnode.cc:
	* libxml++/nodes/element.cc:
	* libxml++/nodes/element.h:
	* libxml++/nodes/entityreference.cc:
	* libxml++/nodes/entityreference.h:
	* libxml++/nodes/node.cc:
	* libxml++/nodes/processinginstructionnode.cc:
	* libxml++/nodes/processinginstructionnode.h:
	* libxml++/nodes/textnode.cc:
	* libxml++/nodes/textnode.h:
	* libxml++/parsers/domparser.cc:
	* libxml++/parsers/domparser.h:
	* libxml++/parsers/parser.cc:
	* libxml++/parsers/parser.h:
	* libxml++/parsers/saxparser.cc:
	* libxml++/parsers/textreader.h:
	Correct the name of the files in their comment blocks, 
	though this could just be removed instead.
	Bug #510056.

2008-01-17  Martin Michlmayr  <tbm@cyrius.com>>

	* libxml++/parsers/parser.cc:
	* libxml++/parsers/textreader.h:
	Added includes to fix the build with gcc 4.3 
	pre-releases.
	Bug #510053.

2.20.0:

2007-08-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/dom_parser_raw/main.cc: When exceptions are disabled, assume that they are also 
	disabled in glibmm and then use the extra error parameter to Glib::convert(), to fix the 
	build when using glibmm with disabled exceptions.
	* docs/manual/Makefile.am: Use maintainer-clean instead of clean-local to delete the html, 
	but this still seems to be deleted when building debian packages.

2.19.2:

2007-08-29  Murray Cumming  <murrayc@murrayc.com>

	* scripts/Makefile.am: distcheck fixes.

2007-08-29  Murray Cumming  <murrayc@murrayc.com>

	* autogen.sh:
	* Makefile.am:
	* configure.in:
	* scripts/Makefile.am:
	* scripts/reduced.m4: Added an --enable-api-exceptions 