@@ -1,3 +1,13 @@
+2008-03-07  Deng Xiyue  <murrayc@murrayc.com>
+
+	* libxml++/document.cc:
+	* libxml++/document.h: Add a destructor 
+	(does not break ABI because the base class already has a 
+	virtual destructor) that calls xmlCleanupParser to match the 
+	existing call to xmlInitParser() in the constructor. Fixes 
+	a memory leak.
+	Bug #501168 (Matt G.)
+
 2008-01-17  Roland Stigge  <stigge@antcom.de>
 
 	* libxml++/attribute.cc:
